# continuous-claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN_MULTI_AGENT_SYSTEM.md  README.md  continuous_claude.sh  install.sh
.github/workflows/: release.yml
dashboard/backend/: main.py  pyproject.toml
dashboard/backend/db/: database.py  models.py
dashboard/backend/models/: schemas.py
dashboard/backend/routes/: agents.py  tasks.py  websocket.py
dashboard/frontend/: package.json  svelte.config.js  vite.config.ts
dashboard/frontend/src/: app.css  app.html
dashboard/frontend/src/lib/components/: AgentCard.svelte  LogStream.svelte
dashboard/frontend/src/lib/stores/: dashboard.ts
dashboard/frontend/src/routes/: +layout.svelte  +page.svelte
docs/: API_REFERENCE.md  CHEATSHEET.md  PROJECT_INDEX.md  USER_GUIDE.md
lib/: conflicts.sh  coordination.sh  dashboard.sh  learning.sh  messaging.sh  orchestrator.sh  personas.sh  review.sh  worktrees.sh
personas/: developer.yaml  documenter.yaml  planner.yaml  reviewer.yaml  security.yaml  tester.yaml
